[tool.poetry]
name = "baseport"
version = "0.1.0"
description = "Export Basecamp 3 To-Dos into a CSV."
authors = ["Nate Gadzhi <nate@respawn.io>"]

[tool.poetry.dependencies]
python = "^3.8"
basecampy3 = "^0.4.0"
click = "^8.0.1"
html2text = "^2020.1.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.6b0", allow-prereleases = true}

[tool.poetry.scripts]
baseport = 'baseport.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
